[package]
name = "candlereprobert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.80"
async-recursion = "1.0.5"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = ["cuda"] }
clap = "4.5.1"
hf-hub = "0.3.2"
qdrant-client = "1.7.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokenizers = "0.15.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
